--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "knex": "^0.15.2",
-    "pg": "^7.7.1"
+    "pg": "^7.7.1",
+    "pryjs": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
