--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "knex": "^0.15.2",
+    "musicmatch": "^0.3.2",
+    "node-fetch": "^2.3.0",
     "pg": "^7.7.1",
-    "pryjs": "^1.0.3"
+    "pryjs": "^1.0.3",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
